--- a/src/partials/social-media-list.html
+++ b/src/partials/social-media-list.html
@@ -1,24 +1,24 @@
 <ul class="header-social-media-list">
-  <li class="header social-media-item">
-    <a href=""
-      ><svg class="social-media-link-icon">
-        <use></use>
+  <li class="header-social-media-item">
+    <a class="social-media-link" href="">
+      <svg class="social-media-link-icon" width="25" height="25">
+        <use href="./img/sprite.svg#facebook-icon"></use>
       </svg>
     </a>
   </li>
 
-  <li class="header social-media-item">
-    <a href=""
-      ><svg class="social-media-link-icon">
-        <use></use>
+  <li class="header-social-media-item">
+    <a class="social-media-link" href="">
+      <svg class="social-media-link-icon" width="25" height="25">
+        <use href="./img/sprite.svg#instagram-icon"></use>
       </svg>
     </a>
   </li>
 
-  <li class="header social-media-item">
-    <a href=""
-      ><svg class="social-media-link-icon">
-        <use></use>
+  <li class="header-social-media-item">
+    <a class="social-media-link" href="">
+      <svg class="social-media-link-icon" width="25" height="25">
+        <use href="./img/sprite.svg#youtube-icon"></use>
       </svg>
     </a>
   </li>
