--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
   <div class="mobile-menu-wrapper">
     <div class="mobile-menu-container">
       <div class="mobile-menu-container-top">
-        <a href="./index.html">energy.flow</a>
+        <a class="mobile-menu-logo" href="./index.html">energy.flow</a>
         <button class="btn-close-mobile-menu">
           <svg class="close-mobile-menu-icon" width="20" height="20">
             <use href="./img/sprite.svg#close-icon"></use>
