--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -1,10 +1,8 @@
-<nav class="header-nav">
-  <ul class="nav-list">
-    <li class="nav-list-item">
-      <a href="./index.html" class="nav-link">Home</a>
-    </li>
-    <li class="nav-list-item">
-      <a href="./favorites.html" class="nav-link">Favorites</a>
-    </li>
-  </ul>
-</nav>
+<ul class="nav-list">
+  <li>
+    <a class="nav-link" href="./index.html">Home</a>
+  </li>
+  <li>
+    <a class="nav-link" href="./favorites.html">Favorites</a>
+  </li>
+</ul>
