--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,7 @@
+.header-container {
+  padding: 0 20px;
+}
+
 .header-nav-container {
   display: flex;
   justify-content: space-between;
@@ -8,10 +12,17 @@
 
 .header-logo {
   padding: 20px 0;
-
   font-weight: 700;
   line-height: 1.12;
   letter-spacing: -0.02em;
+}
+
+.main-navigation-container .nav-list {
+  display: none;
+}
+
+.main-social-media-container .header-social-media-list {
+  display: none;
 }
 
 .btn-open-mobile-menu {
@@ -27,13 +38,25 @@
 }
 
 .mobile-menu-wrapper {
-  position: absolute;
+  position: fixed;
   z-index: 5;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 20px;
+
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms var(--transition-animation),
+    visibility 250ms var(--transition-animation);
+}
+
+.mobile-menu-is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .mobile-menu-container {
@@ -47,15 +70,17 @@
   background-color: var(--light-gray-color);
 }
 
-.mobile-menu-container .nav-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .mobile-menu-container-top {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.mobile-menu-logo {
+  color: var(--soft-white-color);
+  font-weight: 700;
+  line-height: 1.12;
+  letter-spacing: -0.02em;
 }
 
 .btn-close-mobile-menu {
@@ -67,26 +92,40 @@
   background-color: transparent;
 }
 
-.is-close {
-  display: none;
-}
-
-.mobile-social-media-container .header-social-media-list {
+.mobile-nav-container .nav-list {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
 }
 
-.main-navigation-container .nav-list {
-  display: none;
-}
-
-.main-social-media-container .header-social-media-list {
-  display: none;
+.mobile-social-media-container .social-media-link {
+  border: 1px solid rgba(246, 246, 246, 0.2);
+  fill: var(--soft-white-color);
 }
 
 @media screen and (min-width: 768px) {
+  .header-container {
+    padding: 0 30px;
+  }
+
+  .header-logo {
+    font-size: 28px;
+    line-height: 1;
+  }
+
   .main-navigation-container .nav-list {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+
+    width: 211px;
+    height: 52px;
+    border-radius: 60px;
+
+    background-color: var(--light-gray-color);
   }
 
   .btn-open-mobile-menu {
@@ -95,5 +134,16 @@
 
   .main-social-media-container .header-social-media-list {
     display: flex;
+  }
+
+  .main-social-media-container .social-media-link {
+    width: 44px;
+    height: 44px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-container {
+    padding: 0 48px;
   }
 }
