--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -1,8 +1,10 @@
 <ul class="nav-list">
   <li>
-    <a class="nav-link" href="./index.html">Home</a>
+    <a class="nav-link" href="./index.html" aria-label="home page">Home</a>
   </li>
   <li>
-    <a class="nav-link" href="./favorites.html">Favorites</a>
+    <a class="nav-link" href="./favorites.html" aria-label="favorites page"
+      >Favorites</a
+    >
   </li>
 </ul>
