--- a/src/partials/social-media-list.html
+++ b/src/partials/social-media-list.html
@@ -1,6 +1,11 @@
 <ul class="header-social-media-list">
   <li class="header-social-media-item">
-    <a class="social-media-link" href="">
+    <a
+      class="social-media-link"
+      href="https://www.facebook.com/goITclub/"
+      target="_blank"
+      aria-label="facebook link"
+    >
       <svg class="social-media-link-icon" width="25" height="25">
         <use href="./img/sprite.svg#facebook-icon"></use>
       </svg>
@@ -8,7 +13,12 @@
   </li>
 
   <li class="header-social-media-item">
-    <a class="social-media-link" href="">
+    <a
+      class="social-media-link"
+      href="https://www.instagram.com/goitclub/"
+      target="_blank"
+      aria-label="instagram link"
+    >
       <svg class="social-media-link-icon" width="25" height="25">
         <use href="./img/sprite.svg#instagram-icon"></use>
       </svg>
@@ -16,7 +26,12 @@
   </li>
 
   <li class="header-social-media-item">
-    <a class="social-media-link" href="">
+    <a
+      class="social-media-link"
+      href="https://www.youtube.com/c/GoIT"
+      target="_blank"
+      aria-label="youtube link"
+    >
       <svg class="social-media-link-icon" width="25" height="25">
         <use href="./img/sprite.svg#youtube-icon"></use>
       </svg>
