--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,8 @@
-<div class="header-container container">
-  <div class="header-nav-container">
-    <a class="header-logo" href="./index.html">energy.flow</a>
+<div class="header-wrapper">
+  <div class="header-container container">
+    <a class="header-logo" href="./index.html" aria-label="main page"
+      >energy.flow</a
+    >
 
     <div class="main-navigation-container">
       <load ="./navigation.html" />
@@ -9,7 +11,7 @@
       <load ="./social-media-list.html" />
     </div>
 
-    <button class="btn-open-mobile-menu">
+    <button class="btn-open-mobile-menu" aria-label="open mobile menu button">
       <svg class="mobile-menu-icon" width="32" height="16">
         <use href="./img/sprite.svg#burger-icon"></use>
       </svg>
@@ -21,8 +23,13 @@
   <div class="mobile-menu-wrapper">
     <div class="mobile-menu-container">
       <div class="mobile-menu-container-top">
-        <a class="mobile-menu-logo" href="./index.html">energy.flow</a>
-        <button class="btn-close-mobile-menu">
+        <a class="mobile-menu-logo" href="./index.html" aria-label="main page"
+          >energy.flow</a
+        >
+        <button
+          class="btn-close-mobile-menu"
+          aria-label="close mobile menu button"
+        >
           <svg class="close-mobile-menu-icon" width="20" height="20">
             <use href="./img/sprite.svg#close-icon"></use>
           </svg>
